[package]
name = "rconc"
version = "0.1.3"
authors = ["Klemens Schölhorn <klemens@schoelhorn.eu>"]
edition = "2018"

[dependencies]
async-std = "^1.9.0"
error-chain = "0.12.2"
directories = "^4.0"
rust-ini = "^0.17.0"
itertools = "^0.10.3"
clap = "^2"

[dependencies.rcon]
version = "^0.6"
features = ["rt-async-std"]
